fix: community button shifted next to enviroment button.

--- a/src/index.scss
+++ b/src/index.scss
@@ -52,20 +52,23 @@ a {
 
 
 .communti-btn-wrapper a {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: left;
   font-size: 12px;
-  line-height: 20px;
   text-align: center;
   text-transform: uppercase;
-  color: #8A8A8A;
   border: 1px solid #F29F48;
-  padding: 11px 18px;
+  padding: 10px;
   background: #fff;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
+  margin-right: 10px;
+  border-radius: 5px;
 }
 
-.communti-btn-wrapper {
-  position: fixed;
-  right: -33px;
-  transform: rotate(-90deg);
-}
+// .communti-btn-wrapper {
+//   position: fixed;
+//   right: -33px;
+//   transform: rotate(-90deg);
+// }
